# work

./: .gitattributes  .gitignore  .taurignore  CLAUDE.md  README.md  dashboard.html  debug_notify.md  dev-server.mjs  diff_tool.html  home.html  index.html  knowledge.html  note.html  ops.html  package-lock.json  package.json  snippet.html  sql.html  start_server.bat  start_server.command  stop_server.bat  stop_server.command  text.html  timer.html  todo.html  tsconfig.json  vite.config.ts  vitest.config.ts  wbs.html
.github/workflows/: release.yml
css/: common.less  dashboard.less  diff_tool.less  index.less  knowledge.less  note.less  ops.less  radio_style.less  snippet.less  sql.less  tab_style.less  text.less  timer.less  todo.less  wbs.less
css/base/: accordion_style.less  bind_var_modal.less  common.less  custom_select.less  date_picker.less  label_filter.less  label_manager.less  radio_style.less  select_style.less  tab_style.less  toast.less  tokens.less  tooltip.less  ui.less
css/components/: activity_log.less  bind_var_modal.less  checkbox.less  checklist.less  custom_select.less  date_picker.less  label_filter.less  (+4 more)
js/: common.js  dashboard.js  diff_tool.js  home.js  index.js  knowledge.js  note.js  ops.js  snippet.js  sql.js  text.js  timer.js  todo.js  wbs.js
pages/: dashboard.html  diff_tool.html  note.html  ops.html  snippet.html  sql.html  text.html  timer.html  todo.html  wbs.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+216 files in other folders)
